--- a/WebApp/tsconfig.json
+++ b/WebApp/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*", "test/**/*.ts"],
+  "include": ["src/**/*", "src/test/**/*.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"],
   "compilerOptions": {
     "module": "commonjs",
